objects/TC_Status__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Highlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowlight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Status Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Campaign__c</fullName>
        <label>Technical Campaign</label>
        <referenceTo>Technical_Campaign__c</referenceTo>
        <relationshipLabel>TC Status</relationshipLabel>
        <relationshipName>TC_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TC Status</label>
    <nameField>
        <displayFormat>TCS-{000000}</displayFormat>
        <label>TC Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>